# SOEM

./: CMakeLists.txt  start_rtnet.sh
oshw/rtnet/: nicdrv.c  oshw.c
soem/: ethercatmain.h
test/linux/eepromtool/: CMakeLists.txt
test/linux/manager/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  slave_info_sdo.txt
test/linux/simple_test/: simple_test.c
test/linux/slaveinfo/: CMakeLists.txt
test/rtnet/simple_test/: CMakeLists.txt
test/rtnet/slaveinfo/: CMakeLists.txt  slaveinfo.c
